@@ -4,7 +4,6 @@ For v0.8.0
 * Two full campaign missions from original game
 * Add portraits for all four characters (missing Sir Jacob)
 * Begin work on audio system
-* Basic menu for character stats
 * Better enemy AI
     * Better pathfinding (don't get stuck or move back and forth)
 * Fix known bugs
